k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api
  namespace: web-api
spec:
  selector:
    app: web-api
  ports:
    - port: 80
      targetPort: 8000
